--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+debug = true
+
 [dependencies]
-git2 = "*"
+git2 = "0.14"
+log = "0.4"
+env_logger = "0.9"
