--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ edition = "2021"
 debug = true
 
 [dependencies]
-git2 = "0.14"
-log = "0.4"
-env_logger = "0.9"
+git2 = "*"
+log = "*"
+env_logger = "*"
