--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [profile.release]
-debug = true
+lto = true
+codegen-units = 1
+# Should be safe, it is short-lived program anyway
+panic = "abort"
 
 [dependencies]
 git2 = { version = "*", default-features = false }
-log = "*"
-env_logger = "*"
 colored = "*"
